--- a/web-output.cabal
+++ b/web-output.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                web-output
-version:             0.1.1.0
+version:             0.2.0.0
 synopsis:            Library to present content to an user via their browser
 -- description:         
 homepage:            https://github.com/danse/web-output
@@ -24,7 +24,8 @@ library
                        temporary,
                        open-browser,
                        directory,
-                       filepath
+                       filepath,
+                       text
   -- hs-source-dirs:      
   default-language:    Haskell2010
                        
@@ -35,5 +36,6 @@ Test-Suite test
                           temporary,
                           open-browser,
                           directory,
-                          filepath
+                          filepath,
+                          text
            default-language:    Haskell2010
