--- a/web-output.cabal
+++ b/web-output.cabal
@@ -4,7 +4,7 @@
 name:                web-output
 version:             0.3.0.0
 synopsis:            Library to present content to an user via their browser
--- description:         
+description:         Library to present content to an user via their browser
 homepage:            https://github.com/danse/web-output
 license:             PublicDomain
 license-file:        LICENSE
@@ -39,3 +39,7 @@ Test-Suite test
                           filepath,
                           text
            default-language:    Haskell2010
+
+source-repository head
+                  type: git
+                  location: git@github.com:danse/web-output.git
